--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,244 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-    background-color: rgb(0, 0, 0);
-    padding-top: 12px;
+  background-color: rgb(0, 0, 0);
+  padding-top: 12px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+.gray {
+  color: rgb(170, 170, 170);
+  font-weight: 700;
+}
+
+.albert--sans {
+  font-family: "Albert Sans", sans-serif;
+}
+
+.arrow--link {
+  display: flex;
+  align-items: center;
+}
+
+.arrow {
+  width: 24px;
 }
 
 /* NAV */
 
 nav {
-    width: 90vw;
-    display: flex;
+  width: 92vw;
+  display: flex;
+  margin: auto;
 }
 
 .nav__wrapper {
-    width: 100%;
+  width: 100%;
+}
+
+.nav__message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 32px;
+  background-color: rgba(25, 111, 95, 0.6);
+  border-radius: 8px;
+}
+
+.nav__message--text {
+  font-weight: 700;
+  font-size: 12px;
+}
+
+.nav__learn-more {
+  font-size: 14px;
+  font-weight: 700;
+  color: rgb(50, 229, 196);
+}
+
+.framer {
+  border: 1px solid rgba(62, 162, 62, 0.3);
+  height: 60%;
+  margin: 0 12px 0 12px;
 }
 
 .nav__bar {
-    display: flex;
+  margin-top: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav__logo--img {
-    height: 24px;
+  height: 24px;
+}
+
+.nav__links {
+  display: flex;
+}
+
+.nav__links li {
+  list-style-type: none;
+  margin-right: 24px;
+}
+
+.nav__link {
+  display: flex;
+  color: rgb(170, 170, 170);
+  font-weight: 700;
 }
 
 .nav__link--arrow {
-    width: 12px;
+  margin-left: 4px;
+  width: 20px;
+  height: auto;
+  color: rgb(170, 170, 170);
+}
+
+.nav__button--1 {
+  padding: 8px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 0.9);
+  font-weight: 700;
+  border-radius: 8px;
+}
+
+.nav__button--2 {
+  padding: 8px;
+  background-color: rgb(35, 213, 163);
+  border-radius: 8px;
+  border: none;
+  margin-left: 8px;
+  color: black;
+}
+
+/* HEADER */
+
+header {
+  width: 92vw;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+  margin-top: 88px;
+}
+
+.header__wrapper {
+  width: 65%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header__h1 {
+  font-size: 72px;
+  font-family: "Albert Sans", sans-serif;
+  text-align: center;
+  font-weight: 700;
+  margin: 24px 0 16px 0;
+  background: linear-gradient(to right, #7cc8e7, #f18787);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.header__para {
+  margin: 24px 0 24px 0;
+  font-size: 20px;
+  font-family: "Albert Sans", sans-serif;
+}
+
+.header__button {
+  margin-top: 40px;
+  font-size: 20px;
+  font-family: "Albert Sans", sans-serif;
+  padding: 16px 12px 16px 12px;
+  border-radius: 8px;
+  background-color: rgb(35, 213, 163);
+  border: none;
+  color: rgb(0, 0, 0);
+}
+
+/* MAIN */
+
+main {
+  width: 92vw;
+  margin: auto;
+}
+
+.main__wrapper {
+  width: 100%;
+}
+
+section {
+  width: 100%;
+}
+
+.main__video--w--desc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.main__video {
+  width: 80%;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  margin: 80px 0 104px 0;
+  border-radius: 8px;
+}
+
+.main__video--description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main__desc--title {
+    display: flex;
+    position: relative;
+}
+
+.main__desc--title--text {
+  font-size: 32px;
+}
+
+.blue--gradient {
+  background: linear-gradient(to top, #d9f1fa, #39c7ff);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.beta--symbol {
+    height: 20px;
+    display: flex;
+    align-items: center;
+    margin-left: 8px;
+    background-color: white;
+    color: #0fb8fa;
+    padding: 4px 8px 4px 8px;
+    border-radius:20px;
+    font-weight: 700;
+    font-size: 12px;
+    bottom: 0px;
 }
