--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,6 @@ header {
 
 .header__h1 {
   font-size: 72px;
-  font-family: "Albert Sans", sans-serif;
   text-align: center;
   font-weight: 700;
   margin: 24px 0 16px 0;
@@ -178,8 +177,7 @@ header {
   color: rgb(0, 0, 0);
 }
 
-/* MAIN */
-
+/* MAIN - SECTION1*/
 main {
   width: 92vw;
   margin: auto;
@@ -201,8 +199,8 @@ section {
 }
 
 .main__video {
-  width: 80%;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  width: 72%;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   margin: 80px 0 104px 0;
   border-radius: 8px;
 }
@@ -212,15 +210,17 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 64%;
+  padding-bottom: 104px;
 }
 
 .main__desc--title {
-    display: flex;
-    position: relative;
+  display: flex;
+  position: relative;
 }
 
 .main__desc--title--text {
-  font-size: 32px;
+  font-size: 28px;
 }
 
 .blue--gradient {
@@ -230,15 +230,138 @@ section {
 }
 
 .beta--symbol {
-    height: 20px;
-    display: flex;
-    align-items: center;
-    margin-left: 8px;
-    background-color: white;
-    color: #0fb8fa;
-    padding: 4px 8px 4px 8px;
-    border-radius:20px;
-    font-weight: 700;
-    font-size: 12px;
-    bottom: 0px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  margin-left: 8px;
+  background-color: white;
+  color: #0fb8fa;
+  padding: 4px 8px 4px 8px;
+  border-radius: 20px;
+  font-weight: 700;
+  font-size: 12px;
+  transform: translateY(16px);
+}
+
+.main__desc--para {
+  text-align: center;
+  font-size: 32px;
+  margin: 24px 0;
+}
+
+.section-bg {
+  /* Creates a circular gradient centered in the element.
+     Starts with dark gray (#0d0d0d) in the center and fades to black (#000000) toward the edges. */
+  background: radial-gradient(
+    circle at bottom,
+    /* Shape and position of the gradient: a circle at the center */ #243439 0%,
+    /* Start color at 0% (center) */ #000000 40%
+      /* End color at 80% (toward the edges) */
+  );
+}
+
+/* MAIN - SECTION2 */
+
+#section2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 104px;
+  padding-bottom: 72px;
+}
+
+.section2__title {
+  font-size: 60px;
+  text-align: center;
+  width: 70%;
+  margin-bottom: 24px;
+  background: linear-gradient(to right, #d07ce7, #ffd9d9);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.section2__tabs {
+  margin: 32px 0;
+}
+
+.section2__tab {
+  cursor: pointer;
+  border-radius: 12px;
+  padding: 12px 16px;
+  font-weight: 600;
+  margin-right: 8px;
+}
+
+.active {
+  background-color: rgba(255, 255, 255, .08);
+}
+
+.section2__content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 95%;
+  margin-top: 24px;
+}
+
+.section2__content--title {
+  font-weight: 500;
+  font-size: 28px;
+  margin-bottom: 16px;
+}
+
+.section2__content--para {
+  color: rgba(255, 255, 255, 0.5);
+  font-weight: 500;
+}
+
+.section2__content--description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  width: 20%;
+  height: 100%;
+  left: 0;
+  background: linear-gradient(
+    to right,
+    rgb(0, 0, 0) 0%,
+    rgb(0, 0, 0) 50%,
+    rgba(0, 0, 0, 0.8) 70%,
+    rgba(0, 0, 0, 0.5) 85%,
+    transparent 100%
+  );
+  z-index: 100;
+}
+
+.section2__video {
+  width: 90%;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 12px;
+}
+
+.section2__content--phone {
+  position: absolute;
+  width: 264px;
+  right: 0px;
+  bottom: -24px;
+  z-index: 5;
+}
+
+.section2__phone--video--container {
+  background-color: rgba(255, 255, 255, .08);
+  position: absolute;
+  width: 224px;
+  height: 476px;
+  right: 20px;
+  bottom: -24px;
+  z-index: 4;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.phone__video {
+  height: 100%;
+  transform: translateX(-304px);
 }
